examples/invalid/03_offer_missing_type_annotation.lane
// invalid: offered value definitions must include an explicit type annotation
module Examples.Invalid03
pub offer constants = Constants::{ answer: 42 }

pub struct Constants {
  answer : Int
}
